tests/errors/from_json_invalid_json.dang
enum Status { PASSED FAILED }

let status: Status! = fromJSON("not json")
